--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,9 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile">
+    android:background="@drawable/back1"
+    tools:context=".Profile"
+    android:id="@+id/main_layout"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_profile1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/profile"
+        android:textColor="@android:color/black"
+        android:textSize="50sp"
+        android:padding="25dp"
+        android:layout_centerHorizontal="true"
+
+        />
+
+
+
+    <Button
+        android:id="@+id/btn_login"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="   Login   "
+        android:textColor="@android:color/black"
+        android:layout_above="@+id/btn_register"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:textSize="35sp"
+
+         />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/register"
+        android:textColor="@android:color/black"
+        android:layout_centerInParent="true"
+        android:textSize="35sp"
+
+        />
+
+
+
+
+</RelativeLayout>
