--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/l_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/username"
+        android:hint="Email"
         android:padding="10dp"
         android:inputType="textEmailAddress"
 
@@ -21,7 +21,7 @@
         android:id="@+id/l_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/email"
+        android:hint="Password"
         android:padding="10dp"
         android:inputType="textPassword"
 
@@ -29,7 +29,7 @@
 
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/l_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
@@ -38,6 +38,20 @@
         android:textSize="25sp"
         android:layout_margin="25dp"
         />
+
+    <Button
+        android:id="@+id/back2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/back"
+        android:background="@android:color/holo_blue_dark"
+        android:layout_gravity="center_horizontal"
+        android:textSize="25sp"
+        android:layout_margin="25dp"
+
+        />
+
+
 
 
 </LinearLayout>
