--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -41,20 +41,35 @@
         android:layout_height="wrap_content"
         android:hint="@string/confirm_password"
         android:padding="10dp"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/bt_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_gravity="center_horizontal"
-        android:textSize="25sp"
-        android:layout_margin="25dp"
 
-        />
+        <Button
+            android:id="@+id/bt_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            android:background="@android:color/holo_blue_dark"
+            android:layout_gravity="center_horizontal"
+            android:textSize="25sp"
+            android:layout_margin="25dp"
+
+            />
+        <Button
+            android:id="@+id/back1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/back"
+            android:background="@android:color/holo_blue_dark"
+            android:layout_gravity="center_horizontal"
+            android:textSize="25sp"
+            android:layout_margin="25dp"
+
+            />
+
+
+
+
 
 
 
