--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,36 +8,38 @@
     >
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:background="@android:color/holo_blue_dark"
         >
-        <TextView
-            android:id="@+id/tv_first"
+
+
+        <ImageButton
+            android:id="@+id/img_butt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/eat_all_day"
-            android:textSize="30sp"
-            android:textColor="@android:color/black"/>
+            android:background="@android:color/holo_blue_dark"
+            android:minWidth="50dp"
+            android:minHeight="50dp"
+            android:src="@drawable/restaurant_btn"
+            android:layout_weight="1"
+            />
 
         <ImageButton
             android:id="@+id/img_butt1"
-            android:background="@android:color/holo_blue_dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:background="@android:color/holo_blue_dark"
             android:minWidth="50dp"
             android:minHeight="50dp"
-            android:src="@drawable/ic_profile"
-            tools:src="@drawable/ic_profile" />
-
-    </RelativeLayout>
-
+            android:src="@drawable/profile_btn"
+            android:layout_weight="1"
+            />
 
 
-
-
+    </LinearLayout>
 
 </RelativeLayout>
