--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,6 @@
             android:id="@+id/img_view_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/back1"/>
 
@@ -29,20 +28,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/img_view_profile"
-            android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_margin="10dp"
 
-            android:text="Nev"/>
+            android:text="Name:"/>
 
         <TextView
             android:id="@+id/tv2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv1"
-            android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_margin="10dp"
 
@@ -53,33 +50,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv2"
-            android:padding="5dp"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
-            android:text="e-mail"/>
+            android:text="E-mail:"/>
 
         <TextView
             android:id="@+id/tv4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv3"
-            android:padding="5dp"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
-            android:text="Telefon szam"/>
+            android:text="Number:"/>
 
         <TextView
             android:id="@+id/tv5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv4"
-            android:padding="5dp"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_margin="10dp"
-            android:text="Lakhely"/>
+            android:text="Address:"/>
 
 
 
