--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -30,8 +30,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Camera"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="415dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_view_change"
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/btn_gallery"
@@ -40,7 +41,16 @@
             android:layout_marginEnd="16dp"
             android:text="Gallery"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:layout_editor_absoluteY="423dp" />
+            app:layout_constraintTop_toBottomOf="@+id/img_view_change" />
+
+        <Button
+            android:id="@+id/btn_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change"
+            app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
+            app:layout_constraintStart_toEndOf="@+id/btn_camera"
+            app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
