--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -27,8 +27,10 @@
 
         <Button
             android:id="@+id/btn_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="184dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="40dp"
             android:text="Camera"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_view_change"
@@ -36,21 +38,14 @@
 
         <Button
             android:id="@+id/btn_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_width="167dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="40dp"
             android:text="Gallery"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_view_change" />
-
-        <Button
-            android:id="@+id/btn_change"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Change"
-            app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/btn_camera"
-            app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />
+            app:layout_constraintTop_toBottomOf="@+id/img_view_change" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
