--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,9 +54,14 @@
 
         <fragment
             android:id="@+id/fragment"
-            android:name="com.example.projectandroid.Restaurants"
+            android:name="com.example.projectandroid.RestaurantsFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
+        <!--  app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph" -->
+
+
+
 
 
 
