--- a/app/src/main/res/layout/restaurants_fragment.xml
+++ b/app/src/main/res/layout/restaurants_fragment.xml
@@ -19,10 +19,23 @@
         tools:context="com.example.projectandroid.MainActivity">
 
 
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@{viewModel.response}"
+            android:text="@{viewModel.resInfo.get(1).img_src}"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@{viewModel.status}"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
