--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,9 +56,10 @@
             android:id="@+id/fragment"
             android:name="com.example.projectandroid.RestaurantsFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <!--  app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" -->
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph"
+            />
 
 
 
