--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -10,16 +10,39 @@
             name="properties"
             type="com.example.projectandroid.dataclass.Restaurant" />
     </data>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        >
 
+         <ImageView
+             android:id="@+id/restaurants_image"
+             android:layout_width="match_parent"
+             android:layout_height="150dp"
+             android:scaleType="centerCrop"
+             android:adjustViewBounds="true"
 
-    <ImageView
-        android:id="@+id/restaurants_image"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        android:padding="2dp"
-        app:img_src="@{properties.img_src}"
-        tools:src="@tools:sample/backgrounds/scenic"/>
+             app:img_src="@{properties.img_src}"
+             tools:src="@tools:sample/backgrounds/scenic"/>
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{properties.name}"
+            android:layout_below="@id/restaurants_image"
+            tools:text="Name"
+        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(properties.price)}"
+            android:layout_below="@id/tv_name"
+            tools:text="Name"
+            />
+
+    </RelativeLayout>
 
 </layout>
