--- a/app/src/main/res/layout/restaurant_data_fragment.xml
+++ b/app/src/main/res/layout/restaurant_data_fragment.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn_favorite"
-                android:text="Add to favorite"
+                android:text=""
                 android:layout_toEndOf="@id/main_photo_image"
 
                 tools:ignore="MissingConstraints" />
