--- a/app/src/main/res/layout/restaurant_data_fragment.xml
+++ b/app/src/main/res/layout/restaurant_data_fragment.xml
@@ -24,7 +24,7 @@
                 android:layout_width="0dp"
                 android:layout_height="266dp"
                 android:scaleType="centerCrop"
-                app:img_src="@{viewModel.selectedRestaurant.img_src}"
+                img_src="@{viewModel.selectedRestaurant.img_src}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -37,8 +37,18 @@
                 android:id="@+id/btn_favorite"
                 android:text=""
                 android:layout_toEndOf="@id/main_photo_image"
-
                 tools:ignore="MissingConstraints" />
+
+            <Button
+                android:id="@+id/btn_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/main_photo_image"
+                android:text=""
+
+                app:layout_constraintStart_toEndOf="@+id/btn_favorite"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="3dp" />
 
             <TextView
                 android:id="@+id/restaurant_name"
